--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
       href="https://fonts.googleapis.com/css2?family=Bad+Script&display=swap"
       rel="stylesheet"
     />
+    <meta
+      name="description"
+      content="“Deep in Blue” is a band that consists of musicians who have been performing for years in the island of Santorini. Each of them has an individual solo career and has been influenced by classical studies and by the sounds of greek,mediterranean and balkan culture."
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Deep in Blue | Home</title>
   </head>
