--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       content="“Deep in Blue” is a band that consists of musicians who have been performing for years in the island of Santorini. Each of them has an individual solo career and has been influenced by classical studies and by the sounds of greek,mediterranean and balkan culture."
     />
     <meta property="og:url" content="https://deepinblueband.com" />
+    <meta property="og:title" content="Deep in Blue" />
     <meta
       name="keywords"
       content="Deep in Blue, Deep, Blue, Music, House, Deep House, Music, Greek Music, Santorini"
